# ocr-check-nld

./: .gitignore  README.rst  pyproject.toml  pyproject.toml~
ocr_check_nld/: __init__.py  cli.py  ocr_check_nld.py  ocr_check_nld.py~
ocr_check_nld.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_ocr_check_nld.py  test_ocr_check_nld.py~
