[tool.poetry]
name = "ocr-check-nld"
version = "0.1.0"
description = ""
authors = ["dasalam <dasalam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.21"
pyimgur = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
